--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "orjson>=3.9.0",
     "xxhash>=3.4.0",
     "lz4>=4.3.0",
+    "typer>=0.9.0",
+    "pyyaml>=6.0.0",
 ]
 
 [project.optional-dependencies]
@@ -60,7 +62,7 @@ training = [
 ]
 
 [project.scripts]
-cantor = "cantor.cli:main"
+cantor = "cantor.cli.main:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["cantor"]
